# Malloc

./: .gitignore  CMakeLists.txt  Makefile  README.fr.md  README.md  auteur
includes/: malloc.h
srcs/: free.c  ft_bzero.c  ft_memcpy.c  ft_putchar.c  ft_putendl.c  ft_putlbr.c  ft_putstr.c  ft_strlen.c  header.c  hexdump.c  malloc.c  malloc_size.c  realloc.c  show_alloc_mem.c  tools.c  zone.c
tests/: test0.c  test1.c  test2.c  test3++.c  test3.c  test4.c  test5.c
